# mac-fan-system

./: .gitignore  README.md  backup.py  build_native.sh  main.py  project.yml  pyproject.toml  widget-sample.json
.github/workflows/: build-mac-widget.yml  ci.yml  release.yml
Formula/: mac-fan-system.rb
MacFanWidgetApp/App/: FanBackendService.swift  FanDaemonClient.swift  MacFanWidgetApp.swift  MenuBarContentView.swift  MenuBarLabelView.swift
MacFanWidgetDaemon/Daemon/: FanDaemonMain.swift  MacFanWidgetDaemon-Bridging-Header.h
MacFanWidgetDaemon/LaunchDaemon/: com.bmithilesh.macfanwidget.daemon.plist
MacFanWidgetShared/: FanDaemonXPC.swift  FanDataStore.swift  FanSharedModels.swift
mac_fan_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
native/: fan_bridge.h  fan_bridge.m  smc_bridge.c  smc_bridge.h
scripts/: render_formula.py
tests/: test_main.py
widget/: FanRPMWidget.swift  FanRPMWidgetBundle.swift  FanWidgetDataSource.swift  FanWidgetModels.swift  README.md
