[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mac-fan-system"
version = "0.1.0"
description = "Safe-by-default macOS fan telemetry and optional external control from Python"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Codex" }
]
dependencies = []

[project.scripts]
mac-fan-system = "main:main"

[tool.setuptools]
py-modules = ["main"]
